src/objects/copado__Kanban_Board__c.object
<CustomObject>
    <description>The Kanban board editor allows admins to define the Kanban board definition, giving users complete flexibility on the Kanban board function and usage.  Any object can be queried and any picklist or lookup field can be updated.</description>
    <fields>
        <fullName>copado__Columns_SOQL__c</fullName>
        <inlineHelpText>SOQL Query to retrieve the columns. Id and Name fields will be used to generate the list.</inlineHelpText>
        <label>Columns from SOQL</label>
        <length>20480</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Field_to_read_update__c</fullName>
        <inlineHelpText>Field to read/update for each Item. In &quot;object.field&quot; format</inlineHelpText>
        <label>Field to read/update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__JSON_Settings__c</fullName>
        <label>JSON Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__SOQL_Query__c</fullName>
        <inlineHelpText>SOQL Query to retrieve each Id, title (first field in the query), and the &quot;Status&quot; field, as defined in Update_Status_Field__c. Every other field will be shown as the text content of the item.</inlineHelpText>
        <label>SOQL Query</label>
        <length>20480</length>
        <type>LongTextArea</type>
    </fields>
    <label>Kanban Board</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Field_to_read_update__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Kanban Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>